Update from August 23, 2022

--- a/68781-h/68781-h.htm
+++ b/68781-h/68781-h.htm
@@ -205,7 +205,7 @@ margin: 1em 0em 1em 1em;
     </style>
   </head>
 <body>
-<p style='text-align:center; font-size:1.2em; font-weight:bold'>The Project Gutenberg eBook of Notes historical, aesthetical, ethnological, physiological, anecdotal and tonsorial, on the hair &amp; beard, by Trichocosmos (pseud)</p>
+<p style='text-align:center; font-size:1.2em; font-weight:bold'>The Project Gutenberg eBook of Notes historical, æsthetical, ethnological, physiological, anecdotal and tonsorial, on the hair &amp; beard, by Trichocosmos (pseud)</p>
 <div style='display:block; margin:1em 0'>
 This eBook is for the use of anyone anywhere in the United States and
 most other parts of the world at no cost and with almost no restrictions
@@ -216,12 +216,12 @@ are not located in the United States, you will have to check the laws of the
 country where you are located before using this eBook.
 </div>
 
-<p style='display:block; margin-top:1em; margin-bottom:1em; margin-left:2em; text-indent:-2em'>Title: Notes historical, aesthetical, ethnological, physiological, anecdotal and tonsorial, on the hair &amp; beard</p>
+<p style='display:block; margin-top:1em; margin-bottom:1em; margin-left:2em; text-indent:-2em'>Title: Notes historical, æsthetical, ethnological, physiological, anecdotal and tonsorial, on the hair &amp; beard</p>
 <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em'>Author: Trichocosmos (pseud)</p>
-<p style='display:block; text-indent:0; margin:1em 0'>Release Date: August 18, 2022 [eBook #68781]</p>
+<p style='display:block; text-indent:0; margin:1em 0'>Release Date: August 22, 2022 [eBook #68781]</p>
 <p style='display:block; text-indent:0; margin:1em 0'>Language: English</p>
   <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em; text-align:left'>Produced by: deaurider, Karin Spence and the Online Distributed Proofreading Team at https://www.pgdp.net (This book was produced from images made available by the HathiTrust Digital Library.)</p>
-<div style='margin-top:2em; margin-bottom:4em'>*** START OF THE PROJECT GUTENBERG EBOOK NOTES HISTORICAL, AESTHETICAL, ETHNOLOGICAL, PHYSIOLOGICAL, ANECDOTAL AND TONSORIAL, ON THE HAIR &AMP; BEARD ***</div>
+<div style='margin-top:2em; margin-bottom:4em'>*** START OF THE PROJECT GUTENBERG EBOOK NOTES HISTORICAL, ÆSTHETICAL, ETHNOLOGICAL, PHYSIOLOGICAL, ANECDOTAL AND TONSORIAL, ON THE HAIR &AMP; BEARD ***</div>
 
 <h1>TRICHOCOSMOS.</h1>
 
@@ -4764,7 +4764,7 @@ Transcriber’s Notes:<br />
 
 
 
-<div style='display:block; margin-top:4em'>*** END OF THE PROJECT GUTENBERG EBOOK NOTES HISTORICAL, AESTHETICAL, ETHNOLOGICAL, PHYSIOLOGICAL, ANECDOTAL AND TONSORIAL, ON THE HAIR &AMP; BEARD ***</div>
+<div style='display:block; margin-top:4em'>*** END OF THE PROJECT GUTENBERG EBOOK NOTES HISTORICAL, ÆSTHETICAL, ETHNOLOGICAL, PHYSIOLOGICAL, ANECDOTAL AND TONSORIAL, ON THE HAIR &AMP; BEARD ***</div>
 <div style='text-align:left'>
 
 <div style='display:block; margin:1em 0'>
